# rustnzb

./: .gitignore  .woodpecker.yml  BUG.md  CLAUDE.md  CONTAINERIZED_BUILD_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.local  README.md  RELEASE_NOTES_v1.2.6.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.3.md  STATUS.md  SabImporter.md  TODO  TODO.md  UPLIFT_PLAN.md  WORKPLAN.md  build.rs  config.example.toml  docker-compose.example.yml  docker-compose.yml  forkmerge.md  generate_release.md  gitmigrate.md  promtail.yml
.cargo/: config.toml
.claude/skills/deploy/: SKILL.md
.claude/skills/logs/: SKILL.md
.claude/skills/loki/: SKILL.md
.claude/skills/test/: SKILL.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  container-canary.yml  desktop-build.yml  docker-deploy.yml  policy.yml  release.yml
apps/rustnzb/: Cargo.toml  build.rs
apps/rustnzb/frontend/: .gitignore  README.md  package-lock.json  package.json  proxy.conf.json
apps/rustnzb/frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
apps/rustnzb/src/: handlers.rs  main.rs
apps/rustnzb/tests/: api_mock_download_test.rs  e2e_download_test.rs  e2e_full_pipeline.rs  e2e_postproc_detection.rs  global_pause_api.rs  parse_real_nzbs.rs  sabnzbd_import_test.rs
apps/rustnzb/tests/support/: mod.rs
benchnzb/: .gitignore  Cargo.toml  Dockerfile  OVERVIEW.md  docker-compose.stress.yml  docker-compose.yml  run-stress.sh  run.sh
benchnzb/results/: benchmark_20260321_011632.csv  benchmark_20260321_011632.json  benchmark_20260321_021725.csv  benchmark_20260321_021725.json  benchmark_20260321_024621.csv  benchmark_20260321_024621.json  benchmark_20260321_041656.csv  benchmark_20260321_041656.json  benchmark_20260321_050534.json  benchmark_20260321_061858.json  benchmark_20260321_083205.json  summary_20260321_011632.txt  summary_20260321_021725.txt  summary_20260321_024621.txt  summary_20260321_041656.txt  summary_20260321_050534.txt  summary_20260321_061858.txt  summary_20260321_083205.txt
benchnzb/src/: charts.rs  config.rs  datagen.rs  main.rs  mock_nntp.rs  report.rs  runner.rs  stress.rs  stress_report.rs  yenc.rs
benchnzb/src/clients/: mod.rs  rustnzbd.rs  sabnzbd.rs
ci/: BASELINE.md  README.md  run
ci/tasks/: build-image  build-linux  build-linux-arm64  build-windows  check  clippy  desktop-test  e2e  fmt  frontend-build  lib.sh  mirror-github  package-release  smoke-runtime  test  verify-image-pins
crates/mock-nntp-server/: Cargo.toml
crates/mock-nntp-server/src/: lib.rs  main.rs
crates/nzb-core/: .woodpecker.yml  CLAUDE.md  Cargo.toml  README.md
crates/nzb-core/src/: config.rs  db.rs  groups_db.rs  lib.rs  models.rs  nzb_parser.rs  sabnzbd_import.rs
crates/nzb-decode/: .woodpecker.yml  CLAUDE.md  Cargo.toml  README.md
crates/nzb-decode/src/: assembler.rs  cache.rs  yenc.rs
crates/nzb-dispatch/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/nzb-dispatch/src/: article_failure.rs  dispatch_engine.rs  download_engine.rs  lib.rs  news_engine.rs
crates/nzb-dispatch/tests/: news_engine_integration.rs
crates/nzb-news/: CLAUDE.md  Cargo.toml  README.md
crates/nzb-news/src/: article.rs  dispatch.rs  downloader.rs  lib.rs  news_wrapper.rs  penalty.rs  server.rs  trylist.rs
crates/nzb-news/tests/: downloader_integration.rs
crates/nzb-nntp/: .gitignore  .woodpecker.yml  CLAUDE.md  Cargo.toml
crates/nzb-nntp/src/: capabilities.rs  config.rs  connect_gate.rs  connection.rs  downloader.rs  lib.rs  pipeline.rs  pool.rs  server.rs  testutil.rs
crates/nzb-nntp/tests/: auth_integration.rs  connection_lifecycle.rs  fault_injection.rs  pipeline_functional.rs
crates/nzb-postproc/: .woodpecker.yml  CLAUDE.md  Cargo.toml  README.md
crates/nzb-postproc/src/: detect.rs  lib.rs  par2.rs  pipeline.rs  unpack.rs
crates/nzb-web/: .woodpecker.yml  Cargo.toml
crates/nzb-web/src/: auth.rs  direct_unpack.rs  download_engine.rs  group_handlers.rs  handlers.rs  lib.rs  log_buffer.rs  queue_manager.rs  rss_monitor.rs  sabnzbd_compat.rs  server.rs  startup.rs  state.rs  util.rs
crates/nzb-web/static/: index.html
crates/nzb-web/tests/: harness_global_pause.rs  harness_hopeless.rs  harness_liveness.rs  harness_priority.rs  harness_slots.rs  harness_smoke.rs  harness_typed_errors.rs  harness_zombie.rs
crates/nzb-web/tests/harness/: mod.rs  nzb_fixture.rs
crates/par2/: Cargo.toml
crates/par2-sys/: Cargo.toml  build.rs
crates/par2-sys/src/: lib.rs
crates/par2/examples/: par2_bench.rs
crates/par2/src/: lib.rs  packets.rs  types.rs  verify.rs
demo/: chunk-FT4DJWVN.js  main-DDPK5JUO.js  mock-api.js
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: main.rs
e2e/: global-setup.ts  global-teardown.ts  package.json  playwright.config.ts
e2e/fixtures/: mock-download-config.toml  seed.sql
e2e/helpers/: api.ts  backend.ts  mock-nntp.ts
e2e/tests/: auth.spec.ts  categories.spec.ts  downloads-mock.spec.ts  first-boot.spec.ts  groups.spec.ts  history.spec.ts  layout.spec.ts  navigation.spec.ts  queue.spec.ts  rss.spec.ts  servers.spec.ts  smoke.spec.ts
frontend/: angular.json  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.routes.ts  app.ts
mockups/: rustnzb-redesign.html  width-modes.html
src/: group_handlers.rs  handlers.rs  main.rs  server.rs
src/dav/: mod.rs
tests/: e2e_download_test.rs  e2e_full_pipeline.rs  e2e_postproc_detection.rs  group_mark_read.rs  nntp_connection_test.rs  parse_real_nzbs.rs
tests/support/: mod.rs
website/: index.html
website/css/: style.css
website/demo/: chunk-BQSR4VGL.js  index.html
website/js/: main.js
(+38 files in other folders)
