[package]
name = "nzb-news"
version = "0.1.12"
edition = "2024"
description = "Layered NNTP download engine: persistent per-connection workers, priority-aware dispatch with cascade-retry, pipelined batch fetching. Pure fetch layer — no decode, no assembly."
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/nzb-news"
readme = "README.md"

[dependencies]
nzb-nntp = { version = "0.2.22", path = "../nzb-nntp" }

tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
tracing = "0.1"

[dev-dependencies]
nzb-nntp = { version = "0.2.22", path = "../nzb-nntp", features = ["test-support"] }
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
