[package]
name = "nzb-nntp"
version = "0.2.22"
edition = "2024"
description = "Async NNTP client with TLS, pipelining, connection pooling, and multi-server support"
license = "MIT"
repository = "https://github.com/AusAgentSmith-org/nzb-nntp"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "time", "macros"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
bytes = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
governor = "0.10"
arc-swap = "1"
webpki-roots = "1"
rustls-pki-types = "1"
parking_lot = "0.12"
flate2 = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
socket2 = "0.5"
tokio-socks = "0.5"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
test-support = []

[dev-dependencies]
nzb-nntp = { path = ".", features = ["test-support"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
